kubernetes/cluster/smart-home/frigate/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
spec:
  template:
    spec:
      containers:
        - name: frigate
          ports:
            - containerPort: 8971
              name: http
              protocol: TCP
