kubernetes/cluster/smart-home/frigate/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frigate
spec:
  template:
    spec:
      securityContext:
        supplementalGroups:
          - 993
      containers:
        - name: frigate
          securityContext:
            privileged: true
          volumeMounts:
            - name: render-device
              mountPath: /dev/dri/renderD128
      volumes:
        - name: render-device
          hostPath:
            path: /dev/dri/renderD128
