kubernetes/cluster/smart-home/frigate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-external
  namespace: smart-home
  labels:
    app.kubernetes.io/name: frigate
spec:
  type: NodePort # 30000-32767
  ports:
    - name: rtsp
      port: 31554
      targetPort: 8554
      nodePort: 31554
      protocol: TCP
  selector:
    app.kubernetes.io/name: frigate
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-auth
  namespace: smart-home
  labels:
    app.kubernetes.io/name: frigate
spec:
  type: ClusterIP
  ports:
    - name: auth
      port: 8971
      targetPort: 8971
      protocol: TCP
  selector:
    app.kubernetes.io/name: frigate
